Source/WebCore/editing/TextIterator.h
@@ -39,6 +39,9 @@ namespace WebCore {
 class InlineTextBox;
 class RenderText;
 class RenderTextFragment;
+namespace SimpleLineLayout {
+class RunResolver;
+}
 
 WEBCORE_EXPORT String plainText(const Range*, TextIteratorBehavior = TextIteratorDefaultBehavior, bool isDisplayString = false);
 WEBCORE_EXPORT String plainTextReplacingNoBreakSpace(const Range*, TextIteratorBehavior = TextIteratorDefaultBehavior, bool isDisplayString = false);
@@ -166,6 +169,8 @@ private:
     // Used to do simple line layout run logic.
     bool m_nextRunNeedsWhitespace { false };
     unsigned m_previousTextLengthInFlow { 0 };
+    std::unique_ptr<SimpleLineLayout::RunResolver> m_flowRunResolverCache;
+
     // Used when text boxes are out of order (Hebrew/Arabic with embedded LTR text)
     Vector<InlineTextBox*> m_sortedTextBoxes;
     size_t m_sortedTextBoxesPosition;
